--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/* is the app's top level style sheet */
 * {
   margin: 0;
   padding: 0;
